# wrap-command

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dist-workspace.toml  patch_lock_file.sh
.github/: dependabot.yml
.github/workflows/: dependabot_validation.yml  publish.yml  release.yml  rust_publish.yml  rust_pull_request.yml  rust_security_audit.yml
src/: main.rs
