[package]
name = "wrap-command"
version = "0.2.3"
edition = "2024"

# keep-sorted start
categories = ["command-line-utilities"]
description = "Wrap a command with optional: locking, timeout, new tmux window, different working directory, ..."
keywords = ["cli", "text"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tobinjt/wrap-command"
# keep-sorted end

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5"
fs4 = "0.13.1"
nix = { version = "0.31.2", features = ["signal"] }
wait-timeout = "0.2.0"
ureq = "3.1.4"

[dev-dependencies]
tempfile = "3.10.1"
mockito = "1.4"
