[package]
name = "wrap-command"
version = "0.2.4"
edition = "2024"

# keep-sorted start
categories = ["command-line-utilities"]
description = "Wrap a command with optional: locking, timeout, new tmux window, different working directory, ..."
keywords = ["cli", "text"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tobinjt/wrap-command"
# keep-sorted end

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6"
fs4 = "1.1.0"
nix = { version = "0.31.2", features = ["signal"] }
wait-timeout = "0.2.1"
ureq = "3.3.0"
fundu = "2.0.1"

[dev-dependencies]
tempfile = "3.27.0"
mockito = "1.7"
